--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Styled Falling Letters</title>
+  <title>Falling Letters Into Button</title>
   <style>
     * {
       margin: 0;
@@ -30,7 +30,7 @@
       box-shadow: 0 0 15px 3px #ffb80088;
       border-radius: 999px;
       padding: 1rem 2rem;
-      min-width: 400px;
+      min-width: 300px;
       height: 72px;
       display: flex;
       justify-content: center;
@@ -38,79 +38,88 @@
       overflow: visible;
     }
 
+    .letter-wrapper {
+      display: flex;
+      flex-wrap: nowrap;
+      position: relative;
+    }
+
     .letter {
-      position: absolute;
       font-size: 1.5rem;
       font-weight: 700;
       color: #f1f1f1;
-      white-space: pre;
       pointer-events: none;
+      position: relative;
+      display: inline-block;
+      visibility: hidden; /* Hide initially to prevent flash */
+    }
+
+    .letter.space {
+      width: 10px;
     }
   </style>
 </head>
 <body>
 
-<div class="button-container" id="button"></div>
+<div class="button-container">
+  <div class="letter-wrapper" id="letterWrapper"></div>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script>
   const text = "Join the Free Beta";
-  const container = document.getElementById("button");
+  const wrapper = document.getElementById("letterWrapper");
   const letters = [];
-
-  const letterSpacing = 22; // fixed spacing for characters
-  let currentX = 0;
 
   text.split("").forEach((char, i) => {
     const span = document.createElement("span");
     span.classList.add("letter");
-    span.textContent = char;
 
-    // Skip spacing for spaces but keep position
     if (char === " ") {
-      currentX += letterSpacing;
-      return;
+      span.classList.add("space");
+      span.innerHTML = "&nbsp;"; // render visible space
+    } else {
+      span.textContent = char;
     }
 
-    // Position inside button
-    const top = container.offsetHeight / 2 - 12;
-    span.style.left = `${currentX}px`;
-    span.style.top = `${top}px`;
-
-    container.appendChild(span);
+    wrapper.appendChild(span);
     letters.push(span);
-
-    // Start from random position above
-    const startX = gsap.utils.random(-200, 200);
-    const startY = gsap.utils.random(-200, -100);
-    const bounceY = window.innerHeight - container.getBoundingClientRect().top - 30;
-
-    // Initial transform
-    gsap.set(span, {
-      x: startX,
-      y: startY,
-    });
-
-    // Fall down
-    gsap.to(span, {
-      y: bounceY,
-      x: `+=${gsap.utils.random(-50, 50)}`,
-      duration: gsap.utils.random(0.8, 1.3),
-      ease: "bounce.out",
-      delay: i * 0.05
-    });
-
-    // Return to original position
-    gsap.to(span, {
-      x: 0,
-      y: 0,
-      duration: 1,
-      ease: "power3.inOut",
-      delay: 1.4 + i * 0.03
-    });
-
-    currentX += letterSpacing;
   });
+
+  setTimeout(() => {
+    const buttonTop = wrapper.getBoundingClientRect().top;
+    const fallDistance = window.innerHeight - buttonTop - 40;
+
+    letters.forEach((letter, i) => {
+      const startX = gsap.utils.random(-200, 200);
+      const startY = gsap.utils.random(-300, -100);
+
+      // Initially hide then show before animating
+      gsap.set(letter, {
+        x: startX,
+        y: startY,
+        visibility: "visible"
+      });
+
+      // Fall and bounce
+      gsap.to(letter, {
+        y: fallDistance,
+        x: `+=${gsap.utils.random(-50, 50)}`,
+        ease: "bounce.out",
+        duration: gsap.utils.random(0.8, 1.3),
+        delay: i * 0.05
+      });
+
+      // Return to original spot
+      gsap.to(letter, {
+        x: 0,
+        y: 0,
+        ease: "power3.inOut",
+        duration: 1,
+        delay: 1.3 + i * 0.03
+      });
+    });
+  }, 100);
 </script>
 
 </body>
