--- a/index.html
+++ b/index.html
@@ -86,40 +86,45 @@
     letters.push(span);
   });
 
-  setTimeout(() => {
-    const buttonTop = wrapper.getBoundingClientRect().top;
-    const fallDistance = window.innerHeight - buttonTop - 40;
+setTimeout(() => {
+  const buttonTop = wrapper.getBoundingClientRect().top;
+  const fallDistance = window.innerHeight - buttonTop - 40;
 
-    letters.forEach((letter, i) => {
-      const startX = gsap.utils.random(-200, 200);
-      const startY = gsap.utils.random(-300, -100);
+  const fallPromises = [];
 
-      // Initially hide then show before animating
-      gsap.set(letter, {
-        x: startX,
-        y: startY,
-        visibility: "visible"
-      });
+  letters.forEach((letter, i) => {
+    const startX = gsap.utils.random(-200, 200);
+    const startY = gsap.utils.random(-300, -100);
 
-      // Fall and bounce
-      gsap.to(letter, {
-        y: fallDistance,
-        x: `+=${gsap.utils.random(-50, 50)}`,
-        ease: "bounce.out",
-        duration: gsap.utils.random(0.8, 1.3),
-        delay: i * 0.05
-      });
-
-      // Return to original spot
-      gsap.to(letter, {
-        x: 0,
-        y: 0,
-        ease: "power3.inOut",
-        duration: 1,
-        delay: 1.3 + i * 0.03
-      });
+    // Set initial off-screen position and make visible
+    gsap.set(letter, {
+      x: startX,
+      y: startY,
+      visibility: "visible"
     });
-  }, 100);
+
+    // Animate falling and bouncing
+    gsap.to(letter, {
+      y: fallDistance,
+      x: `+=${gsap.utils.random(-50, 50)}`,
+      ease: "bounce.out",
+      duration: gsap.utils.random(0.8, 1.3),
+      delay: i * 0.05
+    });
+  });
+
+  // After all fall animations are complete, bring all letters back together
+  // Wait slightly longer than the max fall delay/duration
+  setTimeout(() => {
+    gsap.to(letters, {
+      x: 0,
+      y: 0,
+      ease: "power3.inOut",
+      duration: 1
+    });
+  }, 1200); // adjust timing as needed based on fall animation
+}, 100);
+
 </script>
 
 </body>
