--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
   const wrapper = document.getElementById("letterWrapper");
   const letters = [];
 
-  text.split("").forEach((char, i) => {
+  text.split("").forEach((char) => {
     const span = document.createElement("span");
     span.classList.add("letter");
 
     if (char === " ") {
       span.classList.add("space");
-      span.innerHTML = "&nbsp;"; // render visible space
+      span.innerHTML = "&nbsp;";
     } else {
       span.textContent = char;
     }
@@ -86,45 +86,39 @@
     letters.push(span);
   });
 
-setTimeout(() => {
-  const buttonTop = wrapper.getBoundingClientRect().top;
-  const fallDistance = window.innerHeight - buttonTop - 40;
-
-  const fallPromises = [];
-
-  letters.forEach((letter, i) => {
-    const startX = gsap.utils.random(-200, 200);
-    const startY = gsap.utils.random(-300, -100);
-
-    // Set initial off-screen position and make visible
-    gsap.set(letter, {
-      x: startX,
-      y: startY,
-      visibility: "visible"
-    });
-
-    // Animate falling and bouncing
-    gsap.to(letter, {
-      y: fallDistance,
-      x: `+=${gsap.utils.random(-50, 50)}`,
-      ease: "bounce.out",
-      duration: gsap.utils.random(0.8, 1.3),
-      delay: i * 0.05
-    });
-  });
-
-  // After all fall animations are complete, bring all letters back together
-  // Wait slightly longer than the max fall delay/duration
   setTimeout(() => {
+    const buttonTop = wrapper.getBoundingClientRect().top;
+    const fallDistance = window.innerHeight - buttonTop - 40;
+
+    // Set initial random positions and make visible
+    letters.forEach((letter) => {
+      const startX = gsap.utils.random(-200, 200);
+      const startY = gsap.utils.random(-300, -100);
+
+      gsap.set(letter, {
+        x: startX,
+        y: startY,
+        visibility: "visible"
+      });
+    });
+
+    // Animate all falling together
     gsap.to(letters, {
+      y: fallDistance,
+      x: (i) => `+=${gsap.utils.random(-70, 70)}`,
+      ease: "bounce.out",
+      duration: 1.2
+    });
+
+    // Animate all returning together
+    gsap.to(letters, {
+      delay: 1.2,
       x: 0,
       y: 0,
       ease: "power3.inOut",
       duration: 1
     });
-  }, 1200); // adjust timing as needed based on fall animation
-}, 100);
-
+  }, 100);
 </script>
 
 </body>
