--- a/index.html
+++ b/index.html
@@ -96,6 +96,37 @@
     .letter.space {
       width: 10px;
     }
+
+.button-container::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  border: 1.5px solid #ffb800;
+  opacity: 0;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.button-container:hover::after {
+  animation: pulse 0.9s ease-out infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1.1, 1.3);
+    opacity: 0;
+  }
+}
+
   </style>
 </head>
 <body>
