--- a/index.html
+++ b/index.html
@@ -28,52 +28,43 @@
       position: relative;
     }
 
-.glow {
-  --p: 10%;
-  --gradient-angle: 0deg;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1.1); /* reduced from 1.4 */
-  width: 17rem;
-  height: 4rem;
-  border-radius: 8rem;
-  background: conic-gradient(
-    from var(--gradient-angle),
-    transparent 0%,
-    #ffb800 var(--p),
-    transparent calc(var(--p) * 2)
-  );
-  filter: blur(6px); /* reduced from 12px */
-  z-index: 0;
-  pointer-events: none;
-  opacity: 0.6; /* optional: softens glow */
-}
-
-
+    /* Button with persistent gradient border, solid inside */
     .button-container {
-      --c: #343212;
-      --p: 10%;
-      --gradient-angle: 0deg;
-
       position: relative;
-      width: 17rem;
+      width: 30rem;
       height: 4rem;
       border-radius: 8rem;
-      background: linear-gradient(var(--c), var(--c)) padding-box,
-                  conic-gradient(
-                    from var(--gradient-angle),
-                    transparent,
-                    #ffb800 var(--p),
-                    transparent calc(var(--p) * 2)
-                  ) border-box;
-      border: 2px solid transparent;
       display: flex;
       justify-content: center;
       align-items: center;
       cursor: pointer;
       z-index: 1;
+      padding: 0 1rem;
+      animation: heartbeat 1.5s ease-in-out infinite;
+      transform-origin: center;
+      transition: transform 0.2s ease;
+      border: 1px solid transparent;
+      background-image:
+        linear-gradient(#0f0f0f, #0f0f0f),
+        linear-gradient(90deg, #CA5223, #FFA615);
+      background-origin: border-box;
+      background-clip: padding-box, border-box;
+    }
+
+    .button-container:hover {
+      transform: scale(1.05);
+      background-image:
+        linear-gradient(#0f0f0f, #0f0f0f),
+        linear-gradient(90deg, #FFA615, #CA5223);
+    }
+
+    @keyframes heartbeat {
+      0%   { transform: scale(1); }
+      14%  { transform: scale(1.05); }
+      28%  { transform: scale(1); }
+      42%  { transform: scale(1.05); }
+      70%  { transform: scale(1); }
+      100% { transform: scale(1); }
     }
 
     .letter-wrapper {
@@ -81,11 +72,12 @@
       flex-wrap: nowrap;
       position: relative;
       z-index: 2;
+      text-align: center;
     }
 
     .letter {
-      font-size: 1.5rem;
-      font-weight: 700;
+      font-size: 1.1rem;
+      font-weight: 600;
       color: #f1f1f1;
       pointer-events: none;
       position: relative;
@@ -94,45 +86,50 @@
     }
 
     .letter.space {
-      width: 10px;
+      width: 6px;
     }
 
-.button-container::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  width: 100%;
-  height: 100%;
-  border-radius: inherit;
-  border: 1.5px solid #ffb800;
-  opacity: 0;
-  z-index: 0;
-  pointer-events: none;
-}
+    /* Hover gradient border offset away from button */
+    .button-container::after {
+      content: "";
+      position: absolute;
+      inset: -6px; /* push outward for gap */
+      border-radius: inherit;
+      border: 1.5px solid transparent;
+      background: linear-gradient(90deg, #CA5223, #FFA615);
+      mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+      mask-composite: exclude;
+      -webkit-mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+      -webkit-mask-composite: xor;
+      opacity: 0;
+      z-index: 0;
+      pointer-events: none;
+    }
 
-.button-container:hover::after {
-  animation: pulse 0.9s ease-out infinite;
-}
+    .button-container:hover::after {
+      animation: pulse 0.9s ease-out infinite;
+    }
 
-@keyframes pulse {
-  0% {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1.1, 1.3);
-    opacity: 0;
-  }
-}
-
+    /* Updated pulse with separate X/Y scaling */
+    @keyframes pulse {
+      0% {
+        transform: scaleX(1) scaleY(1);
+        opacity: 1;
+      }
+      100% {
+        transform: scaleX(1.08) scaleY(1.2); /* less horizontal, more vertical */
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
 
 <div class="glow-wrapper">
-  <div class="glow" id="glowEffect"></div>
   <div class="button-container" id="button">
     <div class="letter-wrapper" id="letterWrapper"></div>
   </div>
@@ -140,7 +137,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script>
-  const text = "Join the Free Beta";
+  const text = "Join the Free Beta 100% free, no credit card";
   const wrapper = document.getElementById("letterWrapper");
   const letters = [];
 
@@ -189,18 +186,6 @@
       duration: 1
     });
   }, 100);
-
-  // Rotate both button and glow
-  const glow = document.getElementById('glowEffect');
-  const button = document.getElementById('button');
-  let angle = 0;
-  function rotateGradient() {
-    angle = (angle + 1) % 360;
-    glow.style.setProperty('--gradient-angle', `${angle}deg`);
-    button.style.setProperty('--gradient-angle', `${angle}deg`);
-    requestAnimationFrame(rotateGradient);
-  }
-  rotateGradient();
 </script>
 
 </body>
