--- a/index.html
+++ b/index.html
@@ -42,21 +42,32 @@
       padding: 0 1rem;
       animation: heartbeat 1.5s ease-in-out infinite;
       transform-origin: center;
-      transition: transform 0.2s ease;
+      transition: 
+        transform 0.2s ease, 
+        background-image 0.3s ease, 
+        color 0.3s ease;
       border: 1px solid transparent;
       background-image:
         linear-gradient(#0f0f0f, #0f0f0f),
         linear-gradient(90deg, #CA5223, #FFA615);
       background-origin: border-box;
       background-clip: padding-box, border-box;
+      color: #f1f1f1;
+      user-select: none;
     }
 
-    .button-container:hover {
-      transform: scale(1.05);
-      background-image:
-        linear-gradient(#0f0f0f, #0f0f0f),
-        linear-gradient(90deg, #FFA615, #CA5223);
-    }
+.button-container:hover {
+  transform: scale(1.05);
+  background-image: linear-gradient(
+    90deg,
+    rgba(202, 82, 35, 0.5),
+    rgba(255, 166, 21, 0.5)
+  );
+  background-origin: border-box;
+  background-clip: border-box;
+  color: #fff;
+}
+
 
     @keyframes heartbeat {
       0%   { transform: scale(1); }
@@ -78,11 +89,12 @@
     .letter {
       font-size: 1.1rem;
       font-weight: 600;
-      color: #f1f1f1;
+      color: inherit; /* inherit text color from container */
       pointer-events: none;
       position: relative;
       display: inline-block;
       visibility: hidden;
+      user-select: none;
     }
 
     .letter.space {
@@ -108,10 +120,12 @@
       opacity: 0;
       z-index: 0;
       pointer-events: none;
+      transition: opacity 0.3s ease;
     }
 
     .button-container:hover::after {
       animation: pulse 0.9s ease-out infinite;
+      opacity: 1;
     }
 
     /* Updated pulse with separate X/Y scaling */
